<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/layout_help_truco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <include
                    layout="@layout/component_help_truco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </FrameLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_quick_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/quick_play"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/layout_help_truco"
                app:layout_constraintTop_toBottomOf="@+id/layout_help_truco" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_quick_play_fodinha_solo"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/quick_play_truco_1x1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_quick_game" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_quick_play_fodinha_group"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/quick_play_truco_2x2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_quick_play_fodinha_solo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1x1_truco_priced"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="@color/pinky"
                android:text="@string/quick_play_truco_1x1_priced"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_quick_play_fodinha_group" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2x2_truco_priced"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/pinky"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/quick_play_truco_2x2_priced"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_1x1_truco_priced" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_tournaments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/torneio_label"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/layout_help_truco"
                app:layout_constraintTop_toBottomOf="@+id/btn_2x2_truco_priced" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_tournaments" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>