<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_user_avatar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/default_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/iv_user_avatar"
                app:layout_constraintStart_toStartOf="@+id/iv_user_avatar"
                app:layout_constraintTop_toBottomOf="@+id/iv_user_avatar"
                android:text="Shermano" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#60000000"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
                app:layout_constraintStart_toStartOf="@+id/tv_user_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
                android:text="shermano@hotmail.com" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/btn_change_avatar"
                app:layout_constraintEnd_toEndOf="@+id/tv_user_email"
                app:layout_constraintStart_toStartOf="@+id/tv_user_email"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_email" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_wallet_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/wallet_label"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialButton" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/deep_purple"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_wallet_label">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_valor_wallet_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/wallet_saldo"
                        android:textColor="@color/transparent_white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_valor_wallet_saldo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/tv_valor_wallet_label"
                        app:layout_constraintTop_toBottomOf="@+id/tv_valor_wallet_label" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_diamond"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_valor_wallet_saldo"
                        app:layout_constraintStart_toEndOf="@+id/tv_valor_wallet_saldo"
                        app:layout_constraintTop_toTopOf="@+id/tv_valor_wallet_saldo"
                        app:tint="@color/white" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_valor_bloqueado_wallet_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/wallet_saldo_bloqueado"
                        android:textColor="@color/transparent_white"
                        app:layout_constraintStart_toEndOf="@+id/tv_valor_wallet_label"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_valor_wallet_saldo_bloqueado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/tv_valor_bloqueado_wallet_label"
                        app:layout_constraintTop_toBottomOf="@+id/tv_valor_bloqueado_wallet_label" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_diamond"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_valor_wallet_saldo_bloqueado"
                        app:layout_constraintStart_toEndOf="@+id/tv_valor_wallet_saldo_bloqueado"
                        app:layout_constraintTop_toTopOf="@+id/tv_valor_wallet_saldo_bloqueado"
                        app:tint="@color/white" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_valor_wallet_saldo_bloqueado_dfescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/wallet_saldo_bloqueado_description"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                    <ImageView
                        android:id="@+id/background"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:alpha="0.4"
                        android:src="@drawable/ic_diamond"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/transparent_white" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_funds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_funds"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_your_rewards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/your_rewards"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_add_funds" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_rewards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_your_rewards"
                tools:listitem="@layout/item_reward" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_wallet_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/wallet_history"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_rewards" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_wallet_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginBottom="4dp"
                tools:listitem="@layout/item_historico_transacao"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_wallet_history" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>